# video_maker

./: Readme.MD  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
makevideo/: admin.py  models.py  urls.py  views.py
makevideo/migrations/: 0001_initial.py  0002_rename_requests_request.py
makevideo/templates/makevideo/: index.html
makevideo/utils/: funcs.py
