[tool.poetry]
name = "pythonproject29"
version = "0.1.0"
description = ""
authors = ["speedfreak <gdramze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
opencv-python = "^4.10.0.84"
wget = "^3.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
